# TopicForge

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  nuke-and-redo.ps1  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
docs/: DDS_QUICKSTART.md  MIGRATION_v0.1_to_v0.2.md  MIGRATION_v0.2_to_v0.3.md  TESTING.md  dds-interop-matrix.md  pro.md  product-plan.md  v0.1.2-action-plan.md
docs/marketplace/: mcpize-listing.md
docs/projet-file/: README.md  architecture-audit-v0.1.2.md  audit-followup-triage-v0.2.0.md  mcp-02-spec.md  mcp-03-spec.md  security-audit-v0.1.2.md  v0.1.2-action-plan.md
docs/projet-file/launch-posts/: v0.1.2-linkedin.md  v0.1.2-reddit-claudeai.md  v0.1.2-reddit-ros.md  v0.2.0-linkedin.md  v0.2.0-reddit-claudeai.md  v0.2.0-reddit-ros.md  v0.3.0-linkedin.md  v0.3.0-reddit-claudeai.md  v0.3.0-reddit-ros.md
docs/projet-file/references/: README.md  omg-dds-interop-2025-05-08.xlsx
docs/projet-file/traction/: 2026-05-14.json  README.md  latest-summary.md
scripts/: traction-snapshot.sh
scripts/integration/: README.md  __init__.py  docker-compose.yml  run-local.ps1  run-local.sh  scenarios_runner.py
scripts/integration/docker/publisher-cyclone/: .dockerignore  Dockerfile
scripts/integration/docker/publisher-fast/: .dockerignore  Dockerfile
scripts/integration/docker/publisher-opendds/: .dockerignore  Dockerfile
scripts/integration/docker/topicforge/: .dockerignore  Dockerfile
scripts/integration/publishers/: __init__.py  cyclone_publisher.py  fast_publisher.py  opendds_publisher.py
src/topicforge/: __init__.py  __main__.py
src/topicforge/adapters/: __init__.py  base.py  composite.py
src/topicforge/adapters/common/: __init__.py  cdr_decoder.py  dds_helpers.py  lifecycle.py  metrics_buffer.py  qos_analyzer.py  xtypes.py
src/topicforge/adapters/dds_cyclone/: __init__.py  adapter.py
src/topicforge/adapters/dds_dust/: __init__.py  adapter.py
src/topicforge/adapters/dds_fast/: __init__.py  adapter.py
src/topicforge/adapters/dds_opendds/: __init__.py  adapter.py
src/topicforge/adapters/ros2_live/: __init__.py  adapter.py
src/topicforge/adapters/ros2_mock/: __init__.py  adapter.py  fixtures.py
src/topicforge/config/: __init__.py  settings.py
src/topicforge/models/: __init__.py  schemas.py
src/topicforge/server/: __init__.py  app.py
src/topicforge/services/: __init__.py  bag_service.py  constants.py  factory.py  health.py  inspector.py
src/topicforge/telemetry/: __init__.py  client.py
src/topicforge/tools/: __init__.py  handlers.py
tests/: conftest.py  test_analyze_bag_multi_format.py  test_bag_service.py  test_cdr_decoder.py  test_composite_adapter.py  test_config.py  test_cyclone_adapter.py  test_dds_cross_vendor.py  test_dds_helpers.py  test_dds_schemas.py  test_dust_adapter.py  test_factory.py  test_fast_adapter.py  test_health.py  test_inspector.py  test_lifecycle_buffer.py  test_live_adapter_parse.py  test_live_adapter_subprocess.py  test_metrics_buffer.py  test_mock_adapter.py  test_opendds_adapter.py  test_peek_bag_samples.py  test_pro_hook.py  test_qos_analyzer.py  test_telemetry.py  test_tools_integration.py  test_topic_metrics.py  test_xtypes.py
tests/fixtures/: csv_echo_imu.txt  csv_echo_pose_multi.txt
tests/integration/: __init__.py  conftest.py  test_real_bus.py  test_scenarios_schema.py
tests/integration/scenarios/: lifecycle_tracking.json  multi_vendor_basic.json  qos_mismatch_detection.json  topic_metrics_frequency.json  topic_metrics_sequence_gaps.json  xtypes_decode.json
