[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "topicforge"
version = "0.3.0"
description = "ROS Topic Inspector & Bag Analyzer MCP server for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Yanis ETHVIGNOT", email = "ethvignot.yanis@gmail.com" }]
keywords = ["mcp", "ros2", "robotics", "ai", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# v0.3.0: split DDS extras per vendor. `[dds]` (the union) pulls both
# OSS Python participants ; granular `[dds-cyclone]` / `[dds-fast]`
# install only one when disk space or install time matters.
#
# v0.4.0 Phase 1.5: added `[dds-opendds]` and `[dds-dust]` for the OSS
# stubs. **The pyopendds / dust-dds-python packages are placeholder
# pins** — they are not yet maintained on PyPI as of 2026-05-14. A
# user running `pip install topicforge[dds-opendds]` today will get an
# install failure with a clear error message ; the extra exists so the
# auto-detect framework has a known module name to probe and so a future
# upstream release lands cleanly without re-touching pyproject.
#
# The union `[dds]` extra remains Cyclone + Fast for deterministic
# install behavior. Users who explicitly want OpenDDS/Dust slotted in
# (when the bindings ship) opt into `[dds-all-oss]`.
dds-cyclone = [
    "cyclonedds>=0.10",
]
dds-fast = [
    "fastdds>=2.6.1,<3",
]
dds-opendds = [
    "pyopendds>=0.1",
]
dds-dust = [
    "dust-dds-python>=0.1",
]
dds = [
    "cyclonedds>=0.10",
    "fastdds>=2.6.1,<3",
]
dds-all-oss = [
    "topicforge[dds]",
    "topicforge[dds-opendds]",
    "topicforge[dds-dust]",
]
all = [
    "topicforge[dds]",
]

[project.scripts]
topicforge = "topicforge.__main__:main"

[project.urls]
Homepage = "https://github.com/yaniswav/TopicForge"
Repository = "https://github.com/yaniswav/TopicForge"
Issues = "https://github.com/yaniswav/TopicForge/issues"
Changelog = "https://github.com/yaniswav/TopicForge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/topicforge"]

[tool.hatch.build.targets.sdist]
include = ["src/topicforge", "tests", "docs", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]
exclude = [".claude", "docs/projet-file/**", "docs/projet-file", "CLAUDE.md", "*.pdf", ".pytest_cache", "pytest-cache-files-*", "pro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "requires_cyclonedds: tests needing the `cyclonedds` Python bindings; auto-skip without them",
    "requires_fastdds: tests needing the `fastdds` Python bindings; auto-skip without them",
    "requires_opendds: tests needing the `pyopendds` Python bindings; auto-skip without them (v0.4.0 Phase 1.5+)",
    "requires_dust: tests needing the `dust_dds_python` Python bindings; auto-skip without them (v0.4.0 Phase 1.5+)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Note: TC (typing-only imports) rules are intentionally omitted — Pydantic
# models and `@runtime_checkable` Protocols need runtime imports, and the
# TYPE_CHECKING dance buys us nothing here.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# test_cyclone_adapter.py and test_fast_adapter.py gate their imports
# behind `pytest.importorskip` at module top, so adapter imports must
# come after — E402 is intentional.
"tests/test_cyclone_adapter.py" = ["B011", "E402"]
"tests/test_fast_adapter.py" = ["B011", "E402"]

[tool.ruff.format]
quote-style = "double"
